Clearing of previous commit - code is much cleaner and organized now.
Missing:
- Styles,
- State to control a message which will display the pressed sound,

--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -1,3 +1,7 @@
-body {
-  color: blue;
+.drum-pad {
+  border: 1px solid black;
+  border-radius: 50px;
+  text-align: center;
+  width: 2em;
+  height: 2em;
 }
