--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -1,7 +1,63 @@
+html,
+body,
+#root {
+  margin: 0 auto;
+}
+
+body {
+  background: black url(../../public/images/Best-Drum-Sets.jpg) fixed center / cover no-repeat;
+}
+
+#drum-machine {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  height: 100vh;
+}
+
+#display {
+  background-color: rgba(255, 179, 66, 0.6);
+  padding: 50px 100px;
+  border-radius: 3px;
+  color: white;
+  min-width: 200px;
+  text-align: center;
+}
+
+.drumPads {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
+}
+
 .drum-pad {
+  display: flex;
   border: 1px solid black;
+  margin-right: 10px;
+  background-color: rgba(255, 179, 66, 0.6);
   border-radius: 50px;
   text-align: center;
   width: 2em;
   height: 2em;
+  justify-content: center;
+  align-items: center;
+  color: white;
+}
+
+.playing {
+  background-color: rgba(255, 179, 66, 0.7);
+  animation: 500ms 1 normal slowerhit;
+}
+
+@keyframes slowerhit {
+  0% {
+    background-color: rgba(255, 255, 255, 0.7);
+  }
+
+  100% {
+    background-color: rgba(255, 179, 66, 1);
+  }
 }
